--- a/css/style.css
+++ b/css/style.css
@@ -837,11 +837,17 @@ input[type="radio"]:checked + label {
     left: 375px;
     top: 20px;
     z-index: 3;
+ user-select: none;/* 禁止文字或圖片被選中 */
 }
 #money_img_img{
     width: 80%;
     transition: all 0.3s;
     cursor: pointer; /*滑鼠過來會變手指*/
+    user-select: none;/* 禁止文字或圖片被選中 */
+-webkit-user-select:none; /* for Chrome、Safari */
+-moz-user-select:none;  /* for Mozilla、Firefox */
+pointer-events: none; /* 禁止拖曳圖片（可選） */
+
 }
 #money_img_img:hover{
     width: 100%;
